Add search fragment, integrate Room database, and update Facebook login flow
- Implement `SearchFragment` and `SearchDetailsFragment` layouts and navigation
- Integrate Room database with `MealRoomDb`, `MealDao`, and `MealEntity`
- Refactor `MealRepository` and `MealRepositoryImpl` to support local storage and domain models
- Update Facebook login implementation to use a shared `CallbackManager` in `MainActivity`
- Add remote DTOs for categories and ingredients with domain mapping
- Update UI layouts for `HomeFragment` and add new drawable resources
- Include Room dependencies in `libs.versions.toml`